Fix wrapping text in dropdowns

--- a/src/_infobar.scss
+++ b/src/_infobar.scss
@@ -38,6 +38,7 @@
 		a {
 			display: block;
 			padding: 0 5px;
+			white-space: nowrap;
 		}
 		&:hover a,
 		a:hover {
